--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
   "scripts": {
     "install:drivers": "npx playwright install",
     "codegen": "npx playwright codegen https://www.cp.pt/passageiros/en/buy-tickets",
-    "test": "playwright test"
+    "lint": "eslint .",
+    "test": "playwright test",
+    "test:dryrun": "playwright test --list",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@types/node": "^20.10.5"
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-playwright": "^0.20.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.3.3"
   }
 }
