--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,8 +4,10 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch:
+    
 jobs:
-  test:
+  playwright-build:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
