--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-n": "^16.5.0",
     "eslint-plugin-playwright": "^0.20.0",
     "eslint-plugin-promise": "^6.1.1",
+    "moment": "^2.30.1",
     "typescript": "^5.3.3"
   }
 }
