--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      - name: Download a single artifact
+      - name: Download a playwright html report
         uses: actions/download-artifact@v3
         with:
           name: playwright-report
