--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload the playwright report
-          path: './playwright-report'
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
