--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,6 +5,16 @@ on:
   pull_request:
     branches: [ main, master ]
   workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: playwright-build
+  cancel-in-progress: false
     
 jobs:
   playwright-build:
@@ -31,3 +41,27 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 2
+
+  publish-report:
+    needs: [playwright-build]
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Download the playwright html report
+        uses: actions/download-artifact@v3
+        with:
+          name: playwright-report
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload the playwright report
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
